--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       const card = document.createElement("div");
       card.className = "relative rounded-xl overflow-hidden shadow-xl hover:shadow-violet-500/30 transition duration-300";
       card.innerHTML = `
-        <img src="images/${id}.png" alt="${name}" class="w-full h-96 object-cover" />
+        <img src="images/${id}.png" alt="${name}" class="w-full h-[480px] object-cover" />
         <div class="absolute bottom-0 w-full px-4 py-3 bg-black bg-opacity-0">
           <h2 class="text-xl font-bold text-white">${name}</h2>
           <p class="text-sm font-medium text-white">${role}</p>
