--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
       card.innerHTML = `
         <img src="images/${id}.png" alt="${name}" class="w-full h-[480px] object-cover" />
         <div class="absolute bottom-0 w-full px-4 py-3 bg-black bg-opacity-0">
-          <h2 class="text-xl font-bold text-white">${name}</h2>
-          <p class="text-sm font-medium text-white">${role}</p>
-          <p class="text-sm italic text-white mt-1">“${desc}”</p>
+          <h2 class="text-2xl font-bold text-white">${name}</h2>
+          <p class="text-base font-medium text-white">${role}</p>
+          <p class="text-base italic text-white mt-1">“${desc}”</p>
         </div>`;
       grid.appendChild(card);
     });
