--- a/index.html
+++ b/index.html
@@ -149,13 +149,14 @@
       { id: "aisha", name: "Aisha", role: "Customer Service AI Assistant", desc: "I handle queries, briefs, FAQs, and reminders." },
       { id: "ava", name: "Ava", role: "Service AI Assistant", desc: "I chase missing payments and send reminders." },
       { id: "leo", name: "Leo", role: "Startup AI Assistant", desc: "I help get your new business on track." },
-      { id: "mia", name: "Mia", role: "", desc: "" },
-      { id: "sarah", name: "Sarah", role: "", desc: "" },
-      { id: "elsa", name: "Elsa", role: "", desc: "" },
-      { id: "lucas", name: "Lucas", role: "", desc: "" },
-      { id: "sophie", name: "Sophie", role: "", desc: "" },
-      { id: "isaac", name: "Isaac", role: "", desc: "" },
-      { id: "tyler", name: "Tyler", role: "", desc: "" }
+     { id: "mia", name: "Mia", role: "Cybersecurity AI Assistant", desc: "I help flag phishing attempts and security risks." },
+      { id: "sarah", name: "Sarah", role: "Staff AI Assistant", desc: "I track internal team actions and attendance." },
+      { id: "elsa", name: "Elsa", role: "Content AI Assistant", desc: "I write newsletters and campaign materials." },
+      { id: "lucas", name: "Lucas", role: "Business AI Assistant", desc: "I help maximize company earnings." },
+      { id: "sophie", name: "Sophie", role: "AI Assistant", desc: "I support general tasks and overflow requests." },
+      { id: "isaac", name: "Isaac", role: "Sales AI Assistant", desc: "I assist with pipeline and lead management." },
+      { id: "tyler", name: "Tyler", role: "Data Science AI Assistant", desc: "I turn raw data into business insights." }
+
     ];
 
     const grid = document.getElementById("assistant-grid");
